mule-user-guide/v/3.4/udp-transport-reference.adoc
=  UDP传输参考

http://en.wikipedia.org/wiki/User_Datagram_Protocol[通用数据报协议]或UDP是快速发送或接收大量消息（数据报）的无状态协议。 Mule中的UDP传输允许使用UDP套接字向Mule发送消息或接收消息。

== 传输信息

[%header,cols="10,9,9,9,9,9,9,9,9,9,9"]
|===
一个|
运输

 为|
文件

 为|
入站

 为|
出站

 为|
请求

 为|
交易

 为|
流

 为|
重试

 为|
欧洲议会议员

 为|
默认MEP

 为|
Maven神器

| UDP  | http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/udp/package-summary.html [JavaDoc +
] http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_udp/namespace-overview.html[SchemaDoc]  | image:check.png[查]  | image:check.png[查]  | image:check.png[查]  | {{11}请求响应 |请求响应 | org.mule.transport：mule-transport {}} image:check.png[查]  | image:error.png[错误] {{13} -udp

|===

== 命名空间和语法

XML名称空间：

[source, code, linenums]
----

----

XML架构位置：

[source, code, linenums]
----

----

连接器语法：

[source, code, linenums]
----

----

端点语法：+
 您可以通过两种不同的方式定义您的端点：

. 前缀端点：
+
[source, code, linenums]
----

----

. 没有前缀的URI：
+
[source, code, linenums]
----

----


有关更多信息，请参阅下面的部分。

== 注意事项

UDP是Internet上使用的标准通信协议之一，支持通过互联网和局域网内的通信。 Mule UDP模块使用本地Java套接字支持，不会增加java.net类中的通信开销，同时允许在Mule配置中指定许多UDP编程的高级功能，而不是使用Java编码。

使用低级别UDP数据报进行通信时使用此传输。 UDP旨在最大限度地提高可靠性，订购或数据完整性的速度和规模。 UDP数据报不能保证以任何特定的速度到达，或者根本不以任何特定的速度到达，并且它们可能以不同的顺序到达。如果这些保证中的任何一个对于您的应用程序很重要，请使用不同的传输方式，例如{{ 0}}。

请注意，UDP不提供错误检查，因此如果重要，您可能希望在应用程序中执行额外的验证或错误处理。

如下面的示例所示，使用UDP传输来：

* 将消息发送到UDP套接字
* 从UDP套接字读取消息

== 特点

UDP模块允许Mule应用程序发送和接收UDP数据报，并声明性地定制UDP的以下功能（在适用的情况下，使用每个功能的标准名称）：

* 发送或接收消息的超时时间（SO_TIMEOUT）。
* 是否允许发送广播消息（SO_BROADCAST）。
* 是否在发送消息后关闭套接字。
* 可以接收的最大邮件大小。

使用UDP端点来：

* 接收UDP数据报并创建入站UDP端点。
* 发送UDP数据报并创建出站UDP端点。

== 用法

要使用UDP端点：

. 将MULE UDP命名空间添加到您的配置中：+
* 使用`+xmlns:udp="http://www.mulesoft.org/schema/mule/udp"+`定义udp前缀
* 使用+ http：//www.mulesoft.org/schema/mule/udp+定义架构位置
+
+ HTTP：//www.mulesoft.org/schema/mule/udp/3.4/mule-udp.xsd+
. 为UDP端点定义一个或多个连接器。 +
* 创建一个UDP连接器：
+
[source, code, linenums]
----

----

. 创建UDP端点。
在入站端点收到* 数据报。数据报中的字节变成消息有效载荷。
* 数据报被发送到出站端点。消息有效载荷中的字节成为数据报。
* 这两种端点均由主机名和端口标识。

*Note*：UDP端点始终是单向的。

== 示例配置

*Copy datagrams from one port to another*

[source, code, linenums]
----

----

❶处的连接器使用所有默认属性。 in的入站端点接收数据报并将它们复制到out的出站端点。

== 配置选项

UDP连接器属性

[%header,cols="34,33,33"]
|===
| {名称{1}}说明 |缺省
| broadcast  |设置为true允许发送到广播端口。 | false
| keepSendSocketOpen  |是否在发送消息后保持套接字打开。 | false
| receiveBufferSize  |这是可以接收的最大（以字节为单位）数据报的大小。 | 16 KB
| sendBufferSize  |网络发送缓冲区的大小。 | 16 KB
|超时 |发送和接收超时， |系统默认
|===

== 配置参考

=== 元素列表

=  UDP传输

UDP传输使事件能够作为数据报包发送和接收。

== 连接器

<connector...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| receiveBufferSize  |整数 |否 |   |套接字接收缓冲区的大小。
|超时 |长 |否 |   |发送或接收呼叫超时的时间。
| sendBufferSize  |整数 |否 |   |套接字发送缓冲区的大小。
|广播 |布尔值 |否 |   |是否启用套接字发送广播数据。
| keepSendSocketOpen  |布尔值 |否 |   |是否保持发送套接字处于打开状态。
|===

<connector...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 入站端点

<inbound-endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| {主机{1}}串 | {无{3}} |
|端口 |端口号 |否 |  |
|===

<inbound-endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 出站端点

<outbound-endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| {主机{1}}串 | {无{3}} |
|端口 |端口号 |否 |  |
|===

<outbound-endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 端点

<endpoint...>的{​​{0}}属性


[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| {主机{1}}串 | {无{3}} |
|端口 |端口号 |否 |  |
|===

<endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 架构

命名空间"http://www.mulesoft.org/schema/mule/udp"

定位模式（1）：

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd]

定位组件：

4个全局元素，4个<<Complex Type Summary>>，1个属性组

=== 架构摘要

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd]

[cols="2*"]
|===
2. + | UDP传输使事件能够作为数据报包发送和接收。
一个|目标命名空间：a |  + http：//www.mulesoft.org/schema/mule/udp+
一个|定义组件：
| 4 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html#a1[全局元素]，4 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html#a2[复合类型]，1 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html#a3[属性组]
一个|默认名称空间限定的表单：
一个|局部元素：合格;本地属性：不合格
一个|架构位置：
一个| + HTTP：//www.mulesoft.org/schema/mule/udp/3.3/mule-udp.xsd
a | Imports Schemas（3）：a | link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-schemadoc_xsd/schema-overview.html[骡子schemadoc.xsd]， link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/schema-overview.html[mule.xsd]， link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/xml_xsd/schema-overview.html[xml.xsd]
由Schemas（2）导入的|：a | _ mule-all-included.xsd， link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-multicast_xsd/schema-overview.html[骡子multicast.xsd]
|===

=== 所有元素摘要

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/connector.html[连接器]

[cols="2*"]
|===
一个|
类型：

 为|
link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html[udpConnectorType]

一个|
内容：

 为|
复杂的，9个属性，属性。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，6个元素

一个|
Subst.Gr：

 为|
可能会替代元素 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/elements/abstract-connector.html[骡：抽象连接器]

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/connector.html#xml_source[XML来源]

一个|
用过的：

 为|
决不

|===

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/endpoint.html[端点]

[cols="2*"]
|===
一个|
类型：

 为|
link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/globalEndpointType.html[globalEndpointType]

一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
Subst.Gr：

 为|
可能会替代元素 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/elements/abstract-global-endpoint.html[骡：抽象的全球端点]

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/endpoint.html#xml_source[XML来源]

一个|
用过的：

 为|
决不

|===

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/inbound-endpoint.html[入站端点]

[cols="2*"]
|===
一个|
类型：

 为|
link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html[inboundEndpointType]

一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
Subst.Gr：

 为|
可能会替代元素 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/elements/abstract-inbound-endpoint.html[骡：抽象入站端点]

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/inbound-endpoint.html#xml_source[XML来源]

一个|
用过的：

 为|
决不

|===

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/outbound-endpoint.html[出站端点]

[cols="2*"]
|====
一个|
类型：

 为|
link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html[outboundEndpointType]

一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
Subst.Gr：

 为|
可能会替代元素 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/elements/abstract-outbound-endpoint.html[骡：抽象出站端点]

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/elements/outbound-endpoint.html#xml_source[XML来源]

一个|
用过的：

 为|
决不

|====

=== 复杂类型摘要

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/globalEndpointType.html[globalEndpointType]

[cols="2*"]
|======
一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/globalEndpointType.html#xml_source[XML来源]

一个|
用过的：

 为|
在1 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/globalEndpointType.html#a3[位置]

|======

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html[inboundEndpointType]

[cols="2*"]
|===
一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html#xml_source[XML来源]

一个|
用过的：

 为|
在1 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html#a3[位置]

|===

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html[outboundEndpointType]

[cols="2*"]
|====
一个|
内容：

 为|
复杂的13个属性，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，16个元素

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html#xml_source[XML来源]

一个|
用过的：

 为|
在1 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html#a3[位置]

|====

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html[udpConnectorType]

[cols="2*"]
|===
一个|
内容：

 为|
复杂的，9 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html#a11[属性]，attr。 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule_xsd/complexTypes/annotatedType.html#a5[通配符]，6个元素

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html#xml_source[XML来源]

一个|
包括：

 为|
5 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html#a6[属性]的定义

一个|
用过的：

 为|
在2 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/complexTypes/udpConnectorType.html#a3[地点]

|===

=== 属性组摘要

link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/attributeGroups/addressAttributes.html[addressAttributes]

[cols="2*"]
|====
一个|
内容：

 为|
2 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a6[属性]

一个|
定义：

 为|
全局在 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[骡子udp.xsd];请参阅 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#xml_source[XML来源]

一个|
包括：

 为|
2 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a4[属性]的定义

一个|
用过的：

 为|
在3 link:http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a2[地点]

|====

'''''

[%autowidth.spread]
|===
|使用 http://www.filigris.com/products/docflex_xml/xsddoc/[DocFlex / XML XSDDoc] 2.5.0模板集使用 http://www.filigris.com/products/docflex_xml/#docflex-xml-re[DocFlex / XML RE] 1.8.5生成的XML模式文档。 http://www.altova.com/xmlspy[Altova XMLSpy]通过 http://www.filigris.com/products/docflex_xml/integrations/xmlspy/[DocFlex / XML XMLSpy集成]生成的所有内容模型图。
|===

==  Javadoc API参考

这个模块的Javadoc可以在这里找到：

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/udp/package-summary.html[UDP]

== 的Maven

UDP模块可以包含以下依赖项：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-udp</artifactId>
  <version>3.4.1</version>
</dependency>
----

== 注意事项

在Mule 3.1.1之前，有两个不同的属性用于在UDP连接器`sendTimeout`和`receiveTimeout`上设置超时。有必要将它们设置为相同的值。
